--- a/index.scss
+++ b/index.scss
@@ -18,12 +18,14 @@ $moderate-violet: hsl(263, 55%, 52%);
 $very-dark-grayish-blue: hsl(217, 19%, 35%);
 $very-dark-blackish-blue: hsl(219, 29%, 14%);
 $white: hsl(0, 0%, 100%);
+$neutral-light-gray: hsl(0, 0%, 81%);
+$neutral-light-grayish-blue: hsl(210, 46%, 95%);
 $barlow-semi-condensed: "Barlow Semi Condensed";
 
 // styles for body
 body {
   background-color: rgb(234, 245, 249);
-  font-family: $barlow-semi-condensed, serif;
+  font-family: $barlow-semi-condensed, sans-serif;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -40,23 +42,56 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4 columns */
   grid-template-rows: repeat(2, auto); /* 2 rows */
-  gap: 20px; /* Optional, for spacing between items */
+  gap: 30px; /* Optional, for spacing between items */
+  align-items: stretch;
 
   .card {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px;
     border-radius: 8px;
 
     .img-name {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 16px;
 
       img {
+        width: 40px;
         border-radius: 100%;
       }
 
       span {
         display: block;
+      }
+
+      span:first-of-type {
+        font-size: 1.3rem;
+        font-weight: 500;
+        margin-block-end: 2px;
+      }
+
+      span + span {
+        font-size: 1rem;
+        font-weight: 400;
+        text-transform: capitalize;
+      }
+    }
+
+    // styles for content
+    .content {
+    //   margin-block-start: 20px;
+
+      h1 {
+        font-size: 1.7rem;
+        font-weight: 600;
+        margin-block: 20px;
+      }
+
+      p {
+        font-size: 1.2rem;
+        font-weight: 500;
       }
     }
   }
@@ -103,7 +138,63 @@ body {
   background-color: $white;
 }
 
-@media (max-width: 700px) {
+.item3,
+.item5 {
+  .img-name {
+    span {
+      color: hsl(217, 19%, 35%);
+    }
+
+    span + span {
+      color: hsla(217, 19%, 35%, 0.5);
+    }
+  }
+
+  .content {
+    h1 {
+      color: $very-dark-grayish-blue;
+    }
+
+    p {
+      color: hsla(217, 19%, 35%, 0.7);
+    }
+  }
+}
+
+.item1,
+.item2,
+.item4 {
+  .img-name {
+    span {
+      color: $neutral-light-grayish-blue;
+    }
+
+    span + span {
+      color: hsla(210, 46%, 95%, 0.5);
+    }
+  }
+
+  .content {
+    h1 {
+      color: $white;
+    }
+
+    p {
+      color: hsla(210, 46%, 95%, 0.7);
+    }
+  }
+}
+
+footer {
+  color: $very-dark-blackish-blue;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  padding-block: 20px;
+}
+
+// media query for a maximum of 700px and below
+@media (max-width: 900px) {
   .cards {
     grid-template-columns: 1fr; /* Make it a single column layout */
   }
