--- a/index.css
+++ b/index.css
@@ -33,16 +33,26 @@ body {
 .cards .card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 10px;
   padding: 30px;
   border-radius: 8px;
+  position: relative;
 }
 .cards .card .img-name {
   display: flex;
   align-items: center;
   gap: 16px;
 }
-.cards .card .img-name img {
+.cards .card .img-name .quote-img {
+  background-color: transparent;
+  position: absolute;
+  top: 2px;
+  right: 50px;
+  width: 160px;
+  opacity: 0.8;
+  width: 160px;
+}
+.cards .card .img-name .img {
   width: 40px;
   border-radius: 100%;
 }
@@ -108,6 +118,7 @@ body {
 
 .white {
   background-color: hsl(0, 0%, 100%);
+  font-family: "Barlow Semi Condensed", sans-serif;
 }
 
 .item3 .img-name span,
@@ -172,4 +183,18 @@ footer {
     grid-column: span 1; /* Each item will span 1 column */
     grid-row: auto; /* Allow the items to stack vertically */
   }
+}
+.white-circle {
+  padding: 1px;
+  border: 2px solid hsl(0, 0%, 100%);
+}
+
+.violet-circle {
+  padding: 1px;
+  border: 2px solid hsl(263, 55%, 52%);
+}
+
+.h1 {
+  position: relative;
+  z-index: 1;
 }/*# sourceMappingURL=index.css.map */
